--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link  rel="stylesheet" href="css/style1.css">
+<link  rel="stylesheet" href="css/style.css">
 <title>Home work 2 </title>
 
 </head>
